--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="Vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="Vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="Vendors/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
+        <link rel="stylesheet" type="text/css" href="Resources/css/queries.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
         <title>Omnifood</title>
     </head>
-    <body>
+        <body>
         <header>
             <nav>
                 <div class="row">
