--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="Vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="Vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="Vendors/css/ionicons.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="Resources/css/queries.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,7 +42,7 @@
                 </p>
             </div>
         
-            <div class="row">
+            <div class="row js--wp-1">
                 <div class="col span-1-of-4 box">
                     <ion-icon name="infinite-outline" class="icon-big"></ion-icon>
                     <h3>Up to 365 days/year</h3>
@@ -127,7 +128,7 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-2 steps-box">
-                    <img src="Resources/img/app-iPhone.png" alt="Omnifood app on Iphone" class="app-screen">
+                    <img src="Resources/img/app-iPhone.png" alt="Omnifood app on Iphone" class="app-screen js--wp-2">
                 </div>
                 <div class="col span-1-of-2 steps-box">
                     <div class="works-step">
@@ -153,7 +154,7 @@
             <div class="row">
                 <h2>We're currently in these cities</h2>
             </div>
-            <div class="row">
+            <div class="row js--wp-3">
                 <div class="col span-1-of-4 box">
                     <img src="Resources/img/lisbon-3.jpg" alt="Lisbon">
                     <h3>Lisbon</h3>
@@ -253,7 +254,7 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-3">
-                    <div class="plan-box">
+                    <div class="plan-box js--wp-4">
                         <div>
                             <h3>Premium</h3>
                             <p class="plan-price">$399 <span>/ month</span></p>
